--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,195 +1,171 @@
+@define-color surface-alpha rgba(16, 20, 23, 0.5);
+@define-color error #ffb4ab;
+@define-color on_hover #17d15b;
+@define-color arch-blue #1793d1;
+@define-color on_surface #dfe3e7;
+@define-color surface #101417;
+@define-color surface_high #313539;
+
 * {
-	font-family: "FiraCode Nerd Font";
-	font-size: 13px;
-	font-weight: bolder;
+	border: none;
+	border-radius: 0px;
+	font-family: Firacode Nerd Font;
+	font-size: 14px;
+	font-weight: bold;
+	min-height: 0;
 }
 
 window#waybar {
-	background-color: transparent;
-	color: #ffffff;
+	background: @surface-alpha;
 }
 
 tooltip {
-  background: #1e1e2e;
-  border: 1px solid #fbaf88;
+	background: @surface;
+	border: 2px solid @on_surface;
+	border-radius: 12px;
 }
+
 tooltip label {
-  color: #ffffff;
-}
-
-@keyframes button_activate {
-  from {
-    opacity: 0.3
-  }
-
-  to {
-    opacity: 1.0;
-  }
-}
-
-#workspaces button {
-  border: none;
-  color: #fbaf88;
-  font-weight: bolder;
-  padding: 3px;
-  background: transparent;
-  box-shadow: none;
-}
-
-#workspaces button.active {
-  color: #268bd2;
-  animation: button_activate .2s ease-in-out;
-}
-
-#workspaces button.urgent {
-  color: #ff8873;
-  background: radial-gradient(circle, rgba(25, 79, 255, 0.3) 20%, rgba(132, 129, 156, 0) 30%);
-}
-
-#workspaces button.persistent {
-  color: #ffffff;
-}
-
-#workspaces button.active:hover,
-#workspaces button.urgent:hover {
-  background: inherit;
-}
-
-#custom-Arch, #workspaces, #mode, #window, #clock, #battery, #cpu, #memory, #network, #pulseaudio, #tray {
-	background-color: #1e1e2e;
-	padding-left: 7.5px;
-	padding-right: 7.5px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	margin-top: 5px;
-	margin-bottom: 0px;
-	font-size: 13px;
+	color: @on_surface;
+	padding: 6px;
 }
 
 #custom-Arch {
-	border-radius: 8px 0px 0px 8px;
-	padding-left: 10px;
-	color: #1793d1;
+	color: @on_surface;
+	background: @surface;
+	border-radius: 0px 30px 30px 0px;
+	padding: 5px 20px 5px 5px;
+	margin-right: 5px;
+	font-size: 20px;
 }
 
 #workspaces {
-	padding-right: 10px;
-	border-radius: 0px 8px 8px 0px;
-	margin-left: -3px;
+	background: @surface;
+	margin: 5px 0px;
+	padding: 5px 14px;
+	border-radius: 24px 10px 24px 10px;
+	color: @on_surface;
+}
+
+#workspaces button {
+	padding: 0px 0px;
+	margin: 0px 3px;
+	border-radius: 16px;
+	color: transparent;
+	background: @surface_high;
+	/* how to apply transitions without the text of inactive
+	 * workspaces from appearing when switching workspaces */
+	transition: min-width 0.3s ease-in-out,
+							background 0.3s ease-in-out,
+							color 0.3s ease-in-out;
+}
+
+#workspaces button.focused {
+	background: @on_surface;
+	color: transparent;
+	transition: all 0.3s ease-in-out;
+}
+
+#workspaces button.urgent {
+	background-color: @error;
+	color: @surface;
+	min-width: 50px;
+	transition: all 0.3s ease-in-out;
+}
+
+#workspaces button:hover {
+	background-color: @on_surface;
+	color: @surface;
+	border-radius: 16px;
+	min-width: 50px;
+	transition: all 0.3s ease-in-out;
+}
+
+#pulseaudio, #network, #battery, #cpu, #temperature, #memory,
+#custom-playerctl.backward, #custom-playerctl.play, #custom-playerctl.forward {
+	background: @surface;
+	margin: 5px 0px;
+}
+
+#custom-playerctl.backward, #custom-playerctl.play, #custom-playerctl.forward {
+	font-size: 22px;
+}
+
+#custom-playerctl.backward:hover, #custom-playerctl.play:hover, #custom-playerctl.forward:hover{
+	color: @on_hover;
+	transition: all 0.3s ease-in-out;
+}
+
+#custom-playerctl.backward {
+	color: @on_surface;
+	border-radius: 24px 0px 0px 10px;
+	padding-left: 16px;
+	margin-left: 5px;
+	transition: all 0.3s ease-in-out;
+}
+
+#custom-playerctl.play {
+	color: @arch-blue;
+	transition: all 0.3s ease-in-out;
+}
+
+#custom-playerctl.forward {
+	color: @on_surface;
+	transition: all 0.3s ease-in-out;
+}
+
+#custom-playerlabel {
+	background: @surface;
+	color: @on_surface;
+	padding-right: 20px;
+	border-radius: 0px 10px 24px 0px;
+	margin: 5px 0px;
 }
 
 #mode {
-	background: #1e1e2e;
-	border-radius: 8px 8px 8px 8px;
-	border-bottom: 3px solid white;
-	margin-left: 10px;
+	background: @surface;
+	margin: 5px 5px;
+	border-radius: 24px 10px 24px 10px;
+	padding-left: 16px;
+	padding-right: 20px;
+	font-size: 20px;
 }
 
-#window {
-	background: #1e1e2e;
-	border-radius: 8px 8px 8px 8px;
-	font-weight: bold;
-	margin-left: 10px;
-	margin-right: 10px;
+#window{
+	background: @surface;
+	padding: 0px 15px;
+	border-radius: 16px;
+	margin: 5px 0px;
 }
 
-#waybar.empty #window {
-	background: none;
-}
-
-#clock {
-	border-radius: 8px 8px 8px 8px;
-	margin-left: 10px;
-}
-
-@keyframes blink-warning {
-	70% {
-		color: white;
-	}
-
-	to {
-		color: black;
-		background-color: orange;
-	}
-}
-
-@keyframes blink-critical {
-	70% {
-		color: white;
-	}
-
-	to {
-		color: black;
-		background-color: red;
-	}
-}
-
-#battery {
-	border-radius: 0px 8px 8px 0px;
-	animation-duration: 3.0s;
-	animation-timing-function: linear;
-	animation-iteration-count: infinite;
-	animation-direction: alternate;
-}
-
-#battery.charging {
-	color: green;
-}
-
-#battery.warning {
-	color: orange;
-}
-
-#battery.warning.discharging {
-	animation-name: blink-warning;
-}
-
-#battery.critical {
-	color: red;
-}
-
-#battery.critical.discharging {
-	animation-name: blink-critical;
+#pulseaudio, #network {
+	border-radius: 10px 24px 10px 24px;
+	padding: 0 20px;
+	margin-left: 7px;
 }
 
 #cpu {
-	border-radius: 8px 0px 0px 8px;
-	margin-left: 10px;
+	border-radius: 10px 0px 0px 24px;
+	padding-left: 16px;
+	padding-right: 7px;
+	margin-left: 7px;
 }
 
 #memory {
+	padding-left: 7px;
+	padding-right: 8px;
 }
 
-#network {
-	border-radius: 8px 8px 8px 8px;
-	margin-left: 10px;
+#battery {
+	border-radius: 0px 24px 10px 0px;
+	padding-left: 8px;
+	padding-right: 16px
 }
 
-#network.disconnected {
-	background: #f53c3c;
+#clock {
+	color: @on_surface;
+	background: @surface;
+	border-radius: 30px 0px 0px 30px;
+	padding: 5px 5px 5px 20px;
+	margin-left: 7px;
 }
-
-#pulseaudio {
-	border-radius: 8px 8px 8px 8px;
-}
-
-#pulseaudio.muted {
-}
-
-/* #tray { */
-/*   margin-left: 10px; */
-/*   padding-left: 10px; */
-/*   padding-right: 10px; */
-/*   font-size: 20px; */
-/*   border-radius: 8px 8px 8px 8px; */
-/* } */
-/**/
-/* #tray>.passive { */
-/*   -gtk-icon-effect: dim; */
-/* } */
-/**/
-/* #tray>.needs-attention { */
-/*   -gtk-icon-effect: highlight; */
-/*   background-color: #eb4d4b; */
-/* } */
-/**/
