--- a/waybar/style.css
+++ b/waybar/style.css
@@ -11,6 +11,7 @@
 * {
 	border-radius: 0px;
 	border: none;
+	color: @on_surface;
 	font-family: Firacode Nerd Font;
 	font-size: 14px;
 	font-weight: bold;
